--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "debug": "^4.1.1",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.9.11",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.3",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "serve-favicon": "^2.5.0",
     "www": "0.0.0"
   },
