--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
   "author": "malicelebi",
   "license": "ISC",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.10.0",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.21.0",
     "cookie-parser": "^1.4.5",
     "debug": "^4.1.1",
     "ejs": "^3.1.2",
+    "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "faker": "^4.1.0",
+    "method-override": "^3.0.0",
     "mongoose": "^5.9.11",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.3",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
